--- a/python/04.이모티콘.ipynb
+++ b/python/04.이모티콘.ipynb
@@ -37,30 +37,105 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "source": [
     "\r\n",
     "from collections import *\r\n",
     "\r\n",
     "def bfs(n) :\r\n",
-    "    save = [0] * 1001\r\n",
-    "    express = [0] * 1001\r\n",
-    "    express[0] = 1\r\n",
+    "    ep_sv = [[0]*2002 for _ in range(2002)]\r\n",
+    "    ep_sv[1][0] = 0\r\n",
+    "    ans = 0\r\n",
     "    deq = deque()\r\n",
-    "    deq.append(1)\r\n",
+    "    deq.append((1,0))\r\n",
     "    while deq :\r\n",
-    "        x = deq.popleft()\r\n",
+    "        x, y  = deq.popleft()\r\n",
     "        if x == n :\r\n",
-    "            ans = move[x]\r\n",
+    "            ans = ep_sv[x][y]\r\n",
+    "            return ans\r\n",
     "        else :\r\n",
-    "            for i in [ x + 1, x - 1, x * 2] :\r\n",
-    "                if 0 <= i <= 100001 and dist[i] == 0 :\r\n",
-    "                    dist[i] = dist[x] + 1\r\n",
-    "                    move[i] = x\r\n",
-    "                    deq.append(i)\r\n",
-    "        return ans             \r\n"
+    "            if x < n and ep_sv[x][x] == 0:\r\n",
+    "                ep_sv[x][x] = ep_sv[x][y] + 1\r\n",
+    "                deq.append((x,x))\r\n",
+    "            if x < n and ep_sv[x + y][0] == 0:\r\n",
+    "                ep_sv[x + y][y] = ep_sv[x][y] + 1\r\n",
+    "                deq.append( (x + y, y) )\r\n",
+    "            if x > n and ep_sv[x - 1][y] == 0 :\r\n",
+    "                ep_sv[x - 1][y] = ep_sv[x][y] + 1\r\n",
+    "                deq.append( (x-1,y))\r\n",
+    "\r\n",
+    "    print(ans)            \r\n",
+    "\r\n",
+    "n = map( int, sys.stdin.readline().split())\r\n",
+    "bfs(18)"
    ],
-   "outputs": [],
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "8"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 11
+    }
+   ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "source": [
+    "\r\n",
+    "from collections import *\r\n",
+    "import sys \r\n",
+    "\r\n",
+    "def bfs(n) :\r\n",
+    "    ep_sv = [[0]*2002 for _ in range(2002)]\r\n",
+    "    ep_sv[1][0] = 0\r\n",
+    "    deq = deque()\r\n",
+    "    deq.append((1,0))\r\n",
+    "    while deq :\r\n",
+    "        x, y  = deq.popleft()\r\n",
+    "        # if x == n :\r\n",
+    "        #     ans = ep_sv[x][y]\r\n",
+    "        #     return ans\r\n",
+    "        # else :\r\n",
+    "        if x < n and ep_sv[x][x] == 0:\r\n",
+    "            ep_sv[x][x] = ep_sv[x][y] + 1\r\n",
+    "            deq.append((x,x))\r\n",
+    "        if x < n and ep_sv[x + y][y] == 0:\r\n",
+    "            ep_sv[x + y][y] = ep_sv[x][y] + 1\r\n",
+    "            deq.append( (x + y, y) )\r\n",
+    "        if x - 1 > 0 and  ep_sv[x - 1][y] == 0 :\r\n",
+    "            ep_sv[x - 1][y] = ep_sv[x][y] + 1\r\n",
+    "            deq.append( (x-1,y))\r\n",
+    "\r\n",
+    "    answer = -1\r\n",
+    "    for i in range(n+1):\r\n",
+    "        if ep_sv[n][i] != 0:\r\n",
+    "            if answer == -1 or answer > ep_sv[n][i]:\r\n",
+    "                answer = ep_sv[n][i]\r\n",
+    "\r\n",
+    "    print(answer)            \r\n",
+    "\r\n",
+    "# n = map( int, sys.stdin.readline().split())\r\n",
+    "# n = int(sys.stdin.readline().rstrip())\r\n",
+    "n = int(input())\r\n",
+    "# n = 2\r\n",
+    "# n = 18\r\n",
+    "bfs(n)"
+   ],
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "22\n"
+     ]
+    }
+   ],
    "metadata": {}
   }
  ],
