--- a/python/13.피보나치.ipynb
+++ b/python/13.피보나치.ipynb
@@ -2,26 +2,23 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 10,
    "source": [
-    "N = int( input() )\r\n",
-    "K = [ int(input()) for i in range(N) ]\r\n",
+    "def dp(n) :\r\n",
+    "    if n == 1 or n == 0 : return n\r\n",
+    "    # if n == 0 : return 0\r\n",
+    "    return dp(n-1) + dp(n-2)\r\n",
     "\r\n",
-    "# 13 => 1101 \r\n",
-    "for i in K :\r\n",
-    "    second = []\r\n",
-    "    while i :\r\n",
-    "        second.append(i%2)\r\n",
-    "        i //= 2\r\n",
-    "    print( *[ i for i, d in enumerate(second) if d == 1 ])"
+    "n = int( input() )\r\n",
+    "\r\n",
+    "print(dp(n)) "
    ],
    "outputs": [
     {
      "output_type": "stream",
      "name": "stdout",
      "text": [
-      "0 1 2\n",
-      "3\n"
+      "55\n"
      ]
     }
    ],
