--- a/python/15.3번째.ipynb
+++ b/python/15.3번째.ipynb
@@ -2,26 +2,23 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "source": [
-    "N = int( input() )\r\n",
-    "K = [ int(input()) for i in range(N) ]\r\n",
-    "\r\n",
-    "# 13 => 1101 \r\n",
-    "for i in K :\r\n",
-    "    second = []\r\n",
-    "    while i :\r\n",
-    "        second.append(i%2)\r\n",
-    "        i //= 2\r\n",
-    "    print( *[ i for i, d in enumerate(second) if d == 1 ])"
+    "N = int(input())\r\n",
+    "K = [list(map(int, input().split())) for i in range(N)]\r\n",
+    "for _K in K :\r\n",
+    "    _K = sorted(_K, reverse = True)\r\n",
+    "    print(_K[2])"
    ],
    "outputs": [
     {
      "output_type": "stream",
      "name": "stdout",
      "text": [
-      "0 1 2\n",
-      "3\n"
+      "3\n",
+      "3\n",
+      "4\n",
+      "15\n"
      ]
     }
    ],
