--- a/python/02.직사각형만들기.ipynb
+++ b/python/02.직사각형만들기.ipynb
@@ -155,8 +155,8 @@
     "half = [0] * ( 1 << 16 )\r\n",
     "\r\n",
     "\r\n",
-    "# n = int(sys.stdin.readline().rstrip())\r\n",
-    "# board = list(map( int, sys.stdin.readline().split()))\r\n",
+    "# n = int(sys..readline().rstrip())\r\n",
+    "# board = list(map( int, sys..readline().split()))\r\n",
     "n = 6\r\n",
     "board = [1, 3, 3, 3, 5, 7]\r\n",
     "board.sort()\r\n",
