--- a/python/17.일정구간합.ipynb
+++ b/python/17.일정구간합.ipynb
@@ -4,24 +4,25 @@
    "cell_type": "code",
    "execution_count": 5,
    "source": [
-    "N = int( input() )\r\n",
-    "K = [ int(input()) for i in range(N) ]\r\n",
     "\r\n",
-    "# 13 => 1101 \r\n",
-    "for i in K :\r\n",
-    "    second = []\r\n",
-    "    while i :\r\n",
-    "        second.append(i%2)\r\n",
-    "        i //= 2\r\n",
-    "    print( *[ i for i, d in enumerate(second) if d == 1 ])"
+    "def dfs(n) :\r\n",
+    "    if n == 1 :\r\n",
+    "        return [1]\r\n",
+    "    return dfs(n-1) + [ n for i in range(n)]\r\n",
+    "\r\n",
+    "N = dfs(45)\r\n",
+    "x, y = map(int, input().split())\r\n",
+    "ans = 0\r\n",
+    "for i in range(x, y+1) :\r\n",
+    "    ans += N[i-1]\r\n",
+    "print(ans)"
    ],
    "outputs": [
     {
      "output_type": "stream",
      "name": "stdout",
      "text": [
-      "0 1 2\n",
-      "3\n"
+      "15\n"
      ]
     }
    ],
